--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <span class="nombre">Daniela Heredia Tolumes</span>
                     </h3>
                     <div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                             class="bi bi-geo-fill" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999zm2.493 8.574a.5.5 0 0 1-.411.575c-.712.118-1.28.295-1.655.493a1.319 1.319 0 0 0-.37.265.301.301 0 0 0-.057.09V14l.002.008a.147.147 0 0 0 .016.033.617.617 0 0 0 .145.15c.165.13.435.27.813.395.751.25 1.82.414 3.024.414s2.273-.163 3.024-.414c.378-.126.648-.265.813-.395a.619.619 0 0 0 .146-.15.148.148 0 0 0 .015-.033L12 14v-.004a.301.301 0 0 0-.057-.09 1.318 1.318 0 0 0-.37-.264c-.376-.198-.943-.375-1.655-.493a.5.5 0 1 1 .164-.986c.77.127 1.452.328 1.957.594C12.5 13 13 13.4 13 14c0 .426-.26.752-.544.977-.29.228-.68.413-1.116.558-.878.293-2.059.465-3.34.465-1.281 0-2.462-.172-3.34-.465-.436-.145-.826-.33-1.116-.558C3.26 14.752 3 14.426 3 14c0-.599.5-1 .961-1.243.505-.266 1.187-.467 1.957-.594a.5.5 0 0 1 .575.411z" />
@@ -96,7 +96,7 @@
                                 <li>
                                     <!-- linkedin -->
                                     <a href="https://www.linkedin.com/in/daniela-heredia-t/" target="_blank">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="currentColor"
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor"
                                             class="bi bi-linkedin " viewBox="0 0 16 16">
                                             <path
                                                 d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
@@ -106,7 +106,7 @@
                                 <li>
                                     <!-- gitHub -->
                                     <a href="https://github.com/DanHT22" target="_blank">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="currentColor"
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor"
                                             class="bi bi-github" viewBox="0 0 16 16">
                                             <path
                                                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
@@ -134,14 +134,9 @@
                 <div class="col-12">
                     <div class="setion-title text-center container" data-aos="fade-up" data-aos-delay="100">
                         <h1>Sobre mi</h1>
-                        <p class="miDescripcion">Desarrolladora web Jr. con enfoque en frontend. Poseo habilidades
-                            técnicas en Figma, HTML5, CSS3, Bootstrap y JavaScript, destinadas al desarrollo de
-                            interfaces de usuario atractivas, intuitivas y funcionales (UX/UI). También cuento con
-                            conocimientos básicos en MySQL, Java y R. Utilizo mis habilidades de liderazgo,
-                            planificación, comunicación y trabajo en equipo para resolver problemas y garantizar el
-                            éxito de los proyectos. Me apasiona la innovación y la tecnología. Me identifico con la
-                            mentalidad de crecimiento, por tanto, mi objetivo es seguir desarrollando mis habilidades
-                            asumiendo nuevos retos.</p>
+                        <p class="miDescripcion">
+                            Soy una desarrolladora web apasionada por crear aplicaciones implementando tecnologías como HTML5, CSS, Bootstrap y Javascript. Utilizo un enfoque centrado en el usuario para crear una interfaz intuitivas y atractivas que mejoren la experiencia de los usuarios (UX/UI). Cuento conconocimientos básicos en MySQL, Java y R. Utilizo mis habilidades de liderazgo, planificación, comunicación y trabajo en equipo para resolver problemas y garantizar el éxito de los proyectos. 
+                        </p>
                         <div class="line"></div>
                     </div>
                 </div>
@@ -242,10 +237,10 @@
                     <div class="project">
                         <img src="./src/img/Blog.png" alt="Blog - Bienestar mental en los perros">
                         <div class="content">
-                            <a href="./src/img/Blog.png" data-fancybox="gallery"
-                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/primerPaginaWeb.git" 
-                                class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/Blog.png" data-fancybox="gallery" class="btn btn-outline-light"
+                                target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/primerPaginaWeb.git" class="btn btn-outline-light"
+                                target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -253,10 +248,10 @@
                     <div class="project">
                         <img src="./src/img/pokeAPI.png" alt="Pokeapi">
                         <div class="content">
-                            <a href="./src/img/pokeAPI.png" data-fancybox="gallery"
-                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/pokeAPI.git" 
-                                class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/pokeAPI.png" data-fancybox="gallery" class="btn btn-outline-light"
+                                target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/pokeAPI.git" class="btn btn-outline-light"
+                                target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +261,7 @@
                         <div class="content">
                             <a href="./src/img/proyectoTablaHTML.png" data-fancybox="gallery"
                                 class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/Tabla_Elementos_HTLM.git"  class="btn btn-outline-light"
+                            <a href="https://github.com/DanHT22/Tabla_Elementos_HTLM.git" class="btn btn-outline-light"
                                 target="_blank">Ver código</a>
                         </div>
                     </div>
@@ -275,10 +270,10 @@
                     <div class="project">
                         <img src="./src/img/proyectoDbeuty.png" alt="ecommerce Dbeuty">
                         <div class="content">
-                            <a href="./src/img/proyectoDbeuty.png" data-fancybox="gallery"
-                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/appWeb.Eq6.git"
-                                class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/proyectoDbeuty.png" data-fancybox="gallery" class="btn btn-outline-light"
+                                target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/appWeb.Eq6.git" class="btn btn-outline-light"
+                                target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -286,10 +281,10 @@
                     <div class="project">
                         <img src="./src/img/calculadoraJS.png" alt="calculadora js">
                         <div class="content">
-                            <a href="./src/img/calculadoraJS.png" data-fancybox="gallery"
-                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/calculadora_JS.git" 
-                                class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/calculadoraJS.png" data-fancybox="gallery" class="btn btn-outline-light"
+                                target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/calculadora_JS.git" class="btn btn-outline-light"
+                                target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -340,41 +335,34 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="footer-top">
-                <div class="container">
-                    <div class="row gy-5">
-
-                        <h4><a href="#" class="text-white">Daniela Heredia T</a></h4>
-                        <ul class="navbar-nav flex-row">
-                            <li class="nav-item">
-                                <a class="social-icon" href="#"><i class="ri-dribbble-line"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="social-icon" href="#"><i class="ri-github-line"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="social-icon" href="#"><i class="ri-instagram-line"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="social-icon" href="#"><i class="ri-youtube-line"></i></a>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <div class="container">
-                    <div class="row text-center">
-                        <div class="col-auto text-center">
-                            <p class="mb-0">&copy; 2023 | DHT</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
     </section>
+
+    <footer>
+        <div class="text-center">
+            <!-- linkedin -->
+            <a href="https://www.linkedin.com/in/daniela-heredia-t/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-linkedin "
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                </svg>
+            </a>
+
+
+            <!-- gitHub -->
+            <a href="https://github.com/DanHT22" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                </svg>
+            </a>
+            <div class="footer-bottom">
+                <p class="text-center  text-light pFooter">&copy; 2023 | DHT</p>
+            </div>
+        </div>
+
+    </footer>
 
 
     <!-- script libreria typed.js -->
